# django-pyref

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
django_pyref.egg-info/: PKG-INFO  SOURCES.txt
refs/: export_utils.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py  xsams_generators.py  xsams_settings.py  xsams_utils.py
refs/migrations/: 0001_initial.py  0004_ref_bibcode.py
refs/templates/refs/: base.html  pagination.html  search.html
refs/tests/: tests.py
src/django_ref.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/refs/: _utils.py  admin.py  api_views.py  apps.py  export_utils.py  filters.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  xsams_generators.py  xsams_settings.py  xsams_utils.py
src/refs/migrations/: 0001_initial.py
src/refs/templates/refs/: refs-list.html
src/refs/templatetags/: pyref_tags.py
tests/: settings.py  test_ref_model.py  test_serialization.py  test_utils.py
