[metadata]
name = pyref
version = 0.3
descriptions = An automatic referencing system for scientific databases
long_description = file: README.rst
url = https://github.com/xnx/django-pyref
author = Frances Skinner, Iouli Gordon, Christian Hill, Robert Hargreaves and Kelly Lockhart
author_email = xn.hill@gmail.com
license = Apache Software Foundation
keywords = database, HITRAN, AMBDAS, reference, citation
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: Apache License Version 2.0 
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages=find:
